k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-prod
  labels:
    environment: production
