k8s/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: questions
          image: ghcr.io/mobqom/questions:1.0.0
