k8s/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api-questions.example.com
      secretName: questions-tls
  rules:
    - host: api-questions.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: questions-service
                port:
                  name: http
